fix crash and stuff